--- a/MMBottomNavigation/app/src/main/res/layout/activity_main.xml
+++ b/MMBottomNavigation/app/src/main/res/layout/activity_main.xml
@@ -30,4 +30,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu" />
 
+    <Button
+        android:id="@+id/set_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Button"
+        app:layout_constraintStart_toStartOf="@+id/message"
+        app:layout_constraintTop_toBottomOf="@+id/message" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
