--- a/MinMeterTestApp/app/src/main/res/layout/content_main.xml
+++ b/MinMeterTestApp/app/src/main/res/layout/content_main.xml
@@ -8,6 +8,17 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
+    <Button
+        android:id="@+id/consolesend_button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="onClick_consolesend"
+        android:text="Send Console"
+        app:layout_constraintStart_toStartOf="@+id/set_button"
+        app:layout_constraintTop_toBottomOf="@+id/consolereceived_button" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
